How to fix - Once you have determined the fields that belong together, you can apply the Extract Class refactoring. If the component makes sense as a sub-class StaticCookie.

--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,7 @@
   "description": "A simple component way to work with Cookies",
   "keywords": ["rafaeldms", "cookie", "component", "https", "http", "csrf", "xss", "samesite"],
   "homepage": "https://www.cagep.com.br",
+  "version": "1.0.1",
   "license": "MIT",
   "authors": [
     {
