Default of true to secureOnly, to no longer present an error when instantiating the class

--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "rafaeldms/cookie",
   "description": "A simple component way to work with Cookies",
-  "keywords": ["rafaeldms", "cookie", "component", "https", "http", "csrf", "xss", "samesite"],
+  "keywords": ["rafaeldms", "component", "https", "http", "csrf", "xss", "samesite"],
   "homepage": "https://www.cagep.com.br",
   "license": "MIT",
   "authors": [
